# Encoding

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
doc/: doxygen.cfg
inc/Encoding/: Base16.hpp  Base32.hpp  Base64.hpp
src/: Base16.cpp  Base32.cpp  Base64.cpp
test/: CMakeLists.txt
test/Base16/src/: Decode.cpp  Encode.cpp
test/Base32/src/: Decode.cpp  Encode.cpp
test/Base64/: CMakeLists.txt
test/Base64/src/: Decode.cpp  Encode.cpp
